[package]
name = "task_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "uuid"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
thiserror = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.3"
# Fix: pin time to compatible version for cookie 0.16.2
time = "=0.3.36"
futures-util = "0.3"
